--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -20,9 +20,11 @@ h1 {
   background-color: var(--secondary-color);
   border: .35rem solid black;
   border-radius: .5rem;
+  /* add box shadow later */
 }
 
-.bg-container {
+/* fix flex */
+.container {
   display: flex;
   width: 100vh;
   height: 100vw;
@@ -30,11 +32,11 @@ h1 {
   margin: 0 auto;
 }
 
-.bg-container>* {
+.container>* {
   width: 100%;
 }
 
-.sm-container {
+.container-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,3 +54,5 @@ h1 {
   text-decoration: none;
   margin-bottom: 2rem;
 }
+
+/* add styling to button hover */
