verified if user answers correctly

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -39,7 +39,7 @@ h1 {
 .container-item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
