--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -13,10 +13,23 @@
   color: #fff;
 }
 
-h1 {
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+header a {
+  text-decoration: none;
+}
+
+h2 {
+  padding-bottom: 2rem;
+  text-align: center;
+}
+
+.item-text {
   margin-bottom: 3rem;
-  font-size: 5rem;
-  text-decoration: underline;
+  font-size: 2rem;
   background-color: var(--secondary-color);
   border: .35rem solid black;
   border-radius: .5rem;
