--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -68,4 +68,26 @@ h2 {
   margin-bottom: 2rem;
 }
 
+.container-secondary {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  margin-bottom: 2rem;
+  width: 25rem;
+  padding: .75rem;
+  font-size: 1.3rem;
+  border: none;
+  box-shadow: 0 0.4rem 1.7rem 0 rgba(0, 0, 0, 0.3);
+}
+
 /* add styling to button hover */
